--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <a href="#home">JD</a>
+                <a href="#home">SK</a>
             </div>
             <ul class="nav-menu">
                 <li><a href="#about">About</a></li>
@@ -36,102 +36,204 @@
             <h2>Full Stack Developer</h2>
             <p>Building innovative web solutions with modern technologies</p>
             <a href="#about" class="btn">Learn More</a>
+            
         </div>
     </section>
 
     <!-- About Section -->
-    <section id="about" class="about">
-        <div class="container">
-            <h2>About Me</h2>
-            <div class="about-content">
-                <div class="about-text">
-                    <p>I'm a passionate full stack developer with 3+ years of experience creating web applications. I love solving complex problems and building user-friendly interfaces.</p>
-                    <p>When I'm not coding, you can find me contributing to open source projects, learning new technologies, or exploring the latest web development trends.</p>
-                </div>
-                <div class="about-image">
-                    <img src="C:\Users\swami\Pictures\Screenshots" alt="John Doe">
-                </div>
+    <<section id="about" class="about">
+    <div class="container">
+        <h2>About Me</h2>
+        <div class="about-content">
+            <div class="about-text">
+                <p class="about-paragraph">
+                    Hello! I'm <strong class="highlight-name">Swami Karanam</strong>, a passionate and results-driven <strong>Full Stack Java Developer</strong> with over <strong>3 years of hands-on experience</strong> in designing and building robust, scalable web applications from concept to deployment. I specialize in creating seamless user experiences by leveraging modern technologies across the entire stack, utilizing <strong>Java, Spring Boot, Hibernate, and RESTful APIs</strong> on the backend, alongside <strong>HTML, CSS, JavaScript, and modern frameworks</strong> on the frontend. My strong foundation in <strong>database design and management</strong> using <strong>MySQL and Oracle</strong> ensures efficient data handling and optimal performance, while my proficiency in <strong>Git, GitHub, and VS Code</strong> enables seamless collaborative development. What sets me apart is my expertise in <strong>Prompt Engineering</strong> – harnessing the power of AI to optimize workflows, automate tasks, enhance code generation, and improve productivity in software development. As a continuous learner with exceptional problem-solving abilities, I'm dedicated to building scalable, efficient, and user-centric applications while integrating cutting-edge AI-assisted development techniques. When I'm not coding, I contribute to open-source projects, stay updated with the latest web development trends, and experiment with new AI tools to enhance my development process.
+                </p>
+            </div>
+            <div class="about-image">
+                <img src="https://www.codelabsystems.in/assets/img/services/full-stack-web-development.png" alt="Swami Karanam">
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Skills Section -->
-    <section id="skills" class="skills">
-        <div class="container">
-            <h2>Skills</h2>
-            <div class="skills-grid">
-                <div class="skill-item">
-                    <i class="fab fa-js"></i>
-                    <h3>JavaScript</h3>
-                </div>
-                <div class="skill-item">
-                    <i class="fab fa-react"></i>
-                    <h3>React</h3>
-                </div>
-                <div class="skill-item">
-                    <i class="fab fa-node-js"></i>
-                    <h3>Node.js</h3>
-                </div>
-                <div class="skill-item">
-                    <i class="fas fa-database"></i>
-                    <h3>MongoDB</h3>
-                </div>
+    <!-- Skills Section -->
+<!-- Skills Section -->
+<section id="skills" class="skills">
+    <div class="container">
+        <h2>Skills</h2>
+        <div class="skills-grid">
+            <!-- Existing Skills -->
+            <div class="skill-item">
+                <i class="fab fa-js"></i>
+                <h3>JavaScript</h3>
+            </div>
+            <div class="skill-item">
+                <i class="fab fa-react"></i>
+                <h3>React</h3>
+            </div>
+            <div class="skill-item">
+                <i class="fab fa-node-js"></i>
+                <h3>Node.js</h3>
+            </div>
+            <div class="skill-item">
+                <i class="fas fa-database"></i>
+                <h3>MongoDB</h3>
+            </div>
+            <div class="skill-item">
+                <i class="fab fa-python"></i>
+                <h3>Python</h3>
+            </div>
+            <div class="skill-item">
+                <i class="fab fa-html5"></i>
+                <h3>HTML5</h3>
+            </div>
+            <div class="skill-item">
+                <i class="fab fa-css3-alt"></i>
+                <h3>CSS3</h3>
+            </div>
+            <div class="skill-item">
+                <i class="fab fa-git-alt"></i>
+                <h3>Git</h3>
+            </div>
+            <!-- Two New Skills Added -->
+            <div class="skill-item">
+                <i class="fab fa-java"></i>
+                <h3>Java</h3>
+            </div>
+            <div class="skill-item">
+                <i class="fab fa-php"></i>
+                <h3>PHP</h3>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Experience Section -->
     <section id="experience" class="experience">
-        <div class="container">
-            <h2>Experience</h2>
-            <div class="experience-item">
-                <h3>Frontend Developer</h3>
-                <h4>Tech Solutions Inc • 2022 - Present</h4>
-                <p>Built responsive web applications using React and modern JavaScript. Collaborated with design teams to implement user-friendly interfaces.</p>
-            </div>
+    <div class="container">
+        <h2>Experience</h2>
+        <div class="experience-item">
+            <h3>Full Stack Java Developer</h3>
+            <h4>Tech Solutions Inc • 2022 - Present</h4>
+            <p>Developed and maintained full-stack web applications using Java, Spring Boot, Hibernate, and RESTful APIs on the backend with HTML, CSS, JavaScript, and modern frameworks on the frontend. Collaborated with cross-functional teams to deliver high-quality software solutions.</p>
         </div>
-    </section>
+        <div class="experience-item">
+            <h3>Frontend Developer</h3>
+            <h4>Web Innovations Ltd • 2021 - 2022</h4>
+            <p>Built responsive and interactive user interfaces using React and modern JavaScript. Implemented UI/UX designs with attention to performance and accessibility standards. Worked closely with designers and backend developers to ensure seamless integration.</p>
+        </div>
+        <div class="experience-item">
+            <h3>Backend Developer</h3>
+            <h4>Data Systems Corp • 2020 - 2021</h4>
+            <p>Designed and developed RESTful APIs using Java and Spring Boot. Implemented database solutions with MySQL and Oracle, focusing on efficient data handling and security. Optimized backend processes for improved performance and scalability.</p>
+        </div>
+        <div class="experience-item">
+            <h3>Software Engineer Intern</h3>
+            <h4>Cloud Tech Solutions • 2019 - 2020</h4>
+            <p>Assisted in developing web applications using Java and JavaScript. Gained hands-on experience with version control using Git and GitHub. Participated in agile development processes and code reviews.</p>
+        </div>
+        <div class="experience-item">
+            <h3>Junior Developer</h3>
+            <h4>StartUp Innovations • 2018 - 2019</h4>
+            <p>Contributed to the development of web applications using HTML, CSS, JavaScript, and Java. Participated in database design and management tasks. Collaborated with senior developers to learn best practices and improve coding skills.</p>
+        </div>
+    </div>
+</section>
 
     <!-- Projects Section -->
     <section id="projects" class="projects">
-        <div class="container">
-            <h2>Projects</h2>
-            <div class="projects-grid">
-                <div class="project-card">
-                    <h3>E-commerce Platform</h3>
-                    <p>Full-stack e-commerce solution with React, Node.js, and MongoDB</p>
-                    <div class="tech-tags">
-                        <span>React</span>
-                        <span>Node.js</span>
-                        <span>MongoDB</span>
-                    </div>
+    <div class="container">
+        <h2>Projects</h2>
+        <div class="projects-grid">
+            <div class="project-card">
+                <h3>AI-Powered Portfolio Chatbot</h3>
+                <p>Custom chatbot trained on personal data using Python, scikit-learn, and NLTK. Integrates with Flask backend and interactive frontend to provide personalized responses about skills, experience, and projects.</p>
+                <div class="tech-tags">
+                    <span>Python</span>
+                    <span>Flask</span>
+                    <span>NLTK</span>
+                    <span>scikit-learn</span>
+                    <span>JavaScript</span>
+                    <span>HTML/CSS</span>
+                </div>
+            </div>
+            <div class="project-card">
+                <h3>E-commerce Platform</h3>
+                <p>Full-stack e-commerce solution with user authentication, shopping cart, payment processing, and admin dashboard. Features responsive design and secure transaction handling.</p>
+                <div class="tech-tags">
+                    <span>React</span>
+                    <span>Node.js</span>
+                    <span>MongoDB</span>
+                    <span>Stripe API</span>
+                    <span>Express.js</span>
+                </div>
+            </div>
+            <div class="project-card">
+                <h3>Enterprise Resource Planning (ERP) System</h3>
+                <p>Comprehensive business management platform built with Java and Spring Boot. Includes modules for inventory management, employee management, and financial reporting with MySQL database integration.</p>
+                <div class="tech-tags">
+                    <span>Java</span>
+                    <span>Spring Boot</span>
+                    <span>Hibernate</span>
+                    <span>MySQL</span>
+                    <span>RESTful APIs</span>
+                </div>
+            </div>
+            <div class="project-card">
+                <h3>Real-Time Collaboration Tool</h3>
+                <p>Web-based application enabling real-time document editing and project collaboration. Features include live chat, file sharing, and version control with WebSocket integration.</p>
+                <div class="tech-tags">
+                    <span>JavaScript</span>
+                    <span>React</span>
+                    <span>Node.js</span>
+                    <span>Socket.io</span>
+                    <span>PostgreSQL</span>
+                </div>
+            </div>
+            <div class="project-card">
+                <h3>AI Prompt Engineering Dashboard</h3>
+                <p>Interactive dashboard for managing and optimizing AI prompts. Allows users to create, test, and analyze prompt effectiveness for various AI models with detailed analytics and performance metrics.</p>
+                <div class="tech-tags">
+                    <span>Python</span>
+                    <span>Flask</span>
+                    <span>JavaScript</span>
+                    <span>Chart.js</span>
+                    <span>OpenAI API</span>
+                    <span>SQL</span>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Contact Section -->
     <section id="contact" class="contact">
-        <div class="container">
-            <h2>Contact Me</h2>
-            <div class="contact-content">
-                <div class="contact-info">
-                    <div class="contact-item">
-                        <i class="fas fa-envelope"></i>
-                        <span>john.doe@email.com</span>
-                    </div>
-                    <div class="contact-item">
-                        <i class="fab fa-github"></i>
-                        <span>github.com/johndoe</span>
-                    </div>
-                    <div class="contact-item">
-                        <i class="fab fa-linkedin"></i>
-                        <span>linkedin.com/in/johndoe</span>
-                    </div>
+    <div class="container">
+        <h2>Contact Me</h2>
+        <div class="contact-content">
+            <div class="contact-info">
+                <div class="contact-item">
+                    <i class="fas fa-envelope"></i>
+                    <span>swami.karanam@email.com</span>
+                </div>
+                <div class="contact-item">
+                    <i class="fab fa-github"></i>
+                    <span>github.com/swaminaidus</span>
+                </div>
+                <div class="contact-item">
+                    <i class="fab fa-linkedin"></i>
+                    <span>linkedin.com/in/swami-karanam</span>
+                </div>
+                <div class="contact-item">
+                    <i class="fab fa-youtube"></i>
+                    <span>youtube.com/@swami-karanam</span>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Chatbot Button -->
     <button id="chatbot-btn" class="chatbot-btn">
